scripts/nullaway/original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8.txt
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:51: error: [NullAway] initializer method does not guarantee @NonNull field encoded_symbols_reparation (line 792) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Encoder(byte[] file, float loss, int overhead) {
           ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:84: error: [NullAway] initializer method does not guarantee @NonNull fields encoded_symbols_reparation (line 792), data (line 48) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Encoder(int fileSize) {
           ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:836: error: [NullAway] passing @Nullable parameter 'intermediate_symbols' where @NonNull is required
	    byte[] enc_data = enc(kLinha, intermediate_symbols, new Tuple(kLinha, isi));
	                                  ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:904: error: [NullAway] passing @Nullable parameter 'intermediate_symbols' where @NonNull is required
		byte[] enc_data = enc(kLinha, intermediate_symbols, new Tuple(kLinha, isi));
		                              ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1355: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
				graph.get(node1).add(node2);
				                ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1372: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
				graph.get(node2).add(node1);
				                ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1454: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
			    for (Integer edge : graph.get(no))
			                                 ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1486: error: [NullAway] dereferenced expression greatestComponent is @Nullable
			    if ( greatestComponent.contains(node1) && greatestComponent.contains(node2) ) {
			                          ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:1537: error: [NullAway] dereferenced expression chosenRow is @Nullable
	    if ( chosenRow.degree > 0 ) {
	                  ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2270: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
				graph.get(node1).add(node2);
				                ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2281: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
				graph.get(node2).add(node1);
				                ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2341: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
			    for (Integer edge : graph.get(no))
			                                 ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2369: error: [NullAway] dereferenced expression visited is @Nullable
			    if ( visited.contains(node1) && visited.contains(node2) ) { // found 2 ones (edge) in component
			                ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Encoder.java:2423: error: [NullAway] dereferenced expression chosenRow is @Nullable
	    if ( chosenRow.degree > 0 ) {
	                  ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/RQLibrary/Row.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Set<Integer> edges = null;
	                    ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/ArraySourceBlockEncoder.java:75: error: [NullAway] assigning @Nullable expression to @NonNull field
    private byte[] intermediateSymbols = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/ArraySourceBlockDecoder.java:423: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/Row.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Set<Integer> edges = null;
	                    ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:615: error: [NullAway] dereferenced expression graph.get(node1) is @Nullable
	            					 graph.get(node1).add(node2);
	            					                 ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:635: error: [NullAway] dereferenced expression graph.get(node2) is @Nullable
	            					 graph.get(node2).add(node1);
	            					                 ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:725: error: [NullAway] enhanced-for expression graph.get(no) is @Nullable
	            				 for(Integer edge : graph.get(no))
	            				                             ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:761: error: [NullAway] dereferenced expression greatestComponent is @Nullable
	            				 if(greatestComponent.contains(node1) && greatestComponent.contains(node2))
	            				                     ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/core/LinearSystem.java:820: error: [NullAway] dereferenced expression chosenRow is @Nullable
	             if(chosenRow.degree > 0)
	                         ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/encodecode/DecoderTask.java:58: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.dataChecker = null;
                             ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/encodecode/DecoderTask.java:104: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return new DecoderTask(null, readable, numIterations);
                               ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/util/summary/LongSummaryStatistics.java:37: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.nextStats = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/url9ecf1e8297_nhamidi_ninja_tgz-pJ8-net_fec_openrq_test_TestRunnerJ8/src/net/fec/openrq/test/TestRunner.java:158: error: [NullAway] dereferenced expression e.getCause() is @Nullable
            e.getCause().printStackTrace();
                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
